devorg/force-app/main/default/objects/Housing_user__c/fields/Appartment__c.field-meta.xml
<CustomField>
    <fullName>Appartment__c</fullName>
    <label>Appartment</label>
    <length>16</length>
    <type>Text</type>
</CustomField>