devorg/force-app/main/default/objects/Housing_user__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donetsk</fullName>
            </value>
            <value>
                <fullName>Lugansk</fullName>
            </value>
            <value>
                <fullName>Kharkov</fullName>
            </value>
            <value>
                <fullName>Kiev</fullName>
            </value>
            <value>
                <fullName>Rovno</fullName>
            </value>
            <value>
                <fullName>Chernigov</fullName>
            </value>
            <value>
                <fullName>Lvov</fullName>
            </value>
            <value>
                <fullName>Uzhgorod</fullName>
            </value>
            <value>
                <fullName>Ternopol</fullName>
            </value>
            <value>
                <fullName>Odessa</fullName>
            </value>
            <value>
                <fullName>Mariupol</fullName>
            </value>
            <value>
                <fullName>Kherson</fullName>
            </value>
            <value>
                <fullName>Dnepr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>