devorg/force-app/main/default/objects/Housing_user__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>User password for sign in.</description>
    <label>Password</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>