devorg/force-app/main/default/objects/Housing_user__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>64</length>
    <type>Text</type>
</CustomField>