devorg/force-app/main/default/objects/Housing_user__c/validationRules/Street_is_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Street_is_valid</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Street__c, &quot;.*[a-z A-Z].*&quot;))</errorConditionFormula>
    <errorDisplayField>Street__c</errorDisplayField>
    <errorMessage>Street field must contain a street name and building number.</errorMessage>
</ValidationRule>